# Embedded_project

./: .gitignore  CMakeLists.txt  arduino.cmake  build.bat  flash-arduino.bat  readme.md  start_visual_studio.bat  write-eeprom.bat
src/appl/: CMakeLists.txt  appl.c  blinkLed.c  main.c
src/appl/blinkLed/: CMakeLists.txt  blinkLed.c
src/appl/joystick/: CMakelists.txt  joystick.c  joystick.h
src/appl/ultrasonic/: CMakelists.txt  ultrasonic.c
src/include/: appl.h  blinkled.h  dllExport.h  eeprom.h  pin.h  registers.h  timer.h  ultrasonic.h  utils.h
src/lib/: CMakeLists.txt  data_types.h  pin.h  utils.c
src/lib/eeprom/: CMakeLists.txt  eeprom.c  eeprom.h
src/lib/pins/: CMakeLists.txt  pin.c  pin.h
src/lib/timer/: CMakeLists.txt  timer.c  timer.h
src/lib/utils/: CMakeLists.txt  CMakelists.txt  memory_cal.h  utils.c  utils.h
src/registers/: CMakeLists.txt  registers.c
test/blinkled/: CMakeLists.txt  test_blinkled.c
tools/cunit-master/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  gitlab-runners.yml
tools/cunit-master/CUnit/: CMakeLists.txt
tools/cunit-master/CUnit/CUnit/: TestDB.h  TestRun.h
tools/cunit-master/CUnit/Sources/Automated/: AutomatedJUnitXml.c
tools/cunit-master/CUnit/Sources/CI/: CUnitCI.c
tools/cunit-master/CUnit/Sources/Framework/: TestRun.c
tools/cunit-master/Examples/CI/: CMakeLists.txt  assert-value-printing.c  ci-split-common.c  ci-split-common.h  ci-split-noauto.c  ci-split-suite_blue.c  ci-split-suite_green.c  ci-split-suite_orange.c  ci-split-suite_orange.h  ci-split-suite_red.c  ci-split-suite_yellow.c  ci-split-suite_yellow.h  ci-split-suites.c
tools/emulator/board/: board.c  board.cpp  board.h
tools/emulator/memory/: CMakeLists.txt  registers.h.in
